--- a/REVEChatSDK.plist
+++ b/REVEChatSDK.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://dl.dropboxusercontent.com/scl/fi/gqqzysr1ikbaa7zql8uca/REVEChatSDK.ipa?rlkey=070opfvpnbzc678mev6objo8f&amp;dl=0</string>
+					<string>https://github.com/revechatofficial/ReveChatSDK-beta-distribution/releases/download/iOS/REVEChatSDK.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
