--- a/REVEChatSDK.plist
+++ b/REVEChatSDK.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/revechatofficial/ReveChatSDK-beta-distribution/releases/download/v1.0.1-beta/REVEChatSDK.ipa</string>
+					<string>https://github.com/revechatofficial/ReveChatSDK-iOS-beta-distribution/releases/download/v1.0.2/REVEChatSDK.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
