--- a/REVEChatSDK.plist
+++ b/REVEChatSDK.plist
@@ -17,13 +17,13 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.revesdk.ProductionReveChatSDK26December</string>
+				<string>com.revechatSdk.staging.new.13March</string>
 				<key>bundle-version</key>
 				<string>1.0.2</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>ProductionReveChatSDK26December</string>
+				<string>Staging_QA_SingleInbox</string>
 			</dict>
 		</dict>
 	</array>
