--- a/ReveChatSDK.plist
+++ b/ReveChatSDK.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/revechatofficial/ReveChatSDK-iOS-beta-distribution/releases/download/21_03_2024/ReveChatSDK.ipa</string>
+					<string>https://github.com/revechatofficial/ReveChatSDK-iOS-beta-distribution/releases/download/30_03_2024/REVEChatSDK.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.revechatSdk.staging.new.13March</string>
+				<string>com.newdesign.qa.server</string>
 				<key>bundle-version</key>
 				<string>1.0.2</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>Staging_QA_SingleInbox</string>
+				<string>QA_SingleInbox</string>
 			</dict>
 		</dict>
 	</array>
