--- a/REVEChatSDK.plist
+++ b/REVEChatSDK.plist
@@ -11,13 +11,13 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/revechatofficial/ReveChatSDK-iOS-beta-distribution/releases/download/04_june_2024/ReveChatSDK.ipa</string>
+					<string>https://github.com/revechatofficial/ReveChatSDK-iOS-beta-distribution/releases/download/22_sept_2024_08_48_AM/ReveChatSDK.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>revechatsdk.production</string>
+				<string>com.revesdk.REVEChatSDKprod</string>
 				<key>bundle-version</key>
 				<string>1.0.2</string>
 				<key>kind</key>
