--- a/REVEChatSDK.plist
+++ b/REVEChatSDK.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.revesdk.REVEChatSDKprod</string>
+				<string>revechatsdk.production</string>
 				<key>bundle-version</key>
 				<string>1.0.2</string>
 				<key>kind</key>
